ChannelTabs: Fix Z-Index (#645)

--- a/src/equicordplugins/channelTabs/style.css
+++ b/src/equicordplugins/channelTabs/style.css
@@ -67,7 +67,7 @@
     padding-left: 4px;
     box-shadow: inset 0 -1px 0 var(--background-base-low);
     grid-area: notice;
-    z-index: 1;
+    z-index: 102;
 }
 
 .vc-channeltabs-container-top-macos {
